--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,268 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300");
-
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300");
+/* body */
 html {
-	font-size: 62.5%;
+	font-size: 11px;
 }
 body {
-	font-size: 1.75em;
-	line-height: 1.6;
+	font-size: 14px;
+	line-height: 1.5;
 	font-weight: 400;
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-	color: #222;
+	color: rgb(0, 0, 0);
+}
+
+.container {
+	position: relative;
+	width: 100%;
+	max-width: 960px;
+	margin: auto;
+	padding: 20px;
+	box-sizing: border-box;
+}
+.column, .columns {
+	width: 100%;
+	float: left;
+	box-sizing: border-box;
+}
+
+/* headers */
+h1, h2, h3, h4, h5, h6 {
+	margin-top: 0;
+	margin-bottom: 2rem;
+	font-weight: 300;
+}
+h1 {
+	font-size: 4.0rem;
+	line-height: 1.2;
+	letter-spacing: -.1rem;
+}
+h2 {
+	font-size: 3.6rem;
+	line-height: 1.25;
+	letter-spacing: -.1rem;
+}
+h3 {
+	font-size: 3.0rem;
+	line-height: 1.3;
+	letter-spacing: -.1rem;
+}
+h4 {
+	font-size: 2.4rem;
+	line-height: 1.35;
+	letter-spacing: -.08rem;
+}
+h5 {
+	font-size: 1.8rem;
+	line-height: 1.5;
+	letter-spacing: -.05rem;
+}
+h6 {
+	font-size: 1.5rem;
+	line-height: 1.6;
+	letter-spacing: 0;
+}
+
+p {
+	margin-top: 0;
+}
+/* links */
+a {
+	color: #ffc5f8;
+}
+a:hover {
+	color: #ffc5f8;
+}
+
+/* background image */
+img {
+	border-radius: 50%;
+	vertical-align: middle;
+	border: 0;
+}
+header {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+ 	width: 100%;
+	height: 100vh;
+	background-image: url("https://wallpaperaccess.com/full/1271644.jpg")
+}
+
+/* titles */
+.title {
+	-webkit-align-self: center;
+	-ms-flex-item-align: center;
+	align-self: center;
+	padding: 2rem;
+	max-width: 960px;
+	text-align: center;
+}
+
+.title h1 {
+	font-size: 80px;
+	font-weight: 300;
+	text-transform: uppercase;
+	line-height: 0.85;
+	margin-bottom: 28px;
+	margin: 0;
+	padding: 0;
+	color: #FFFFFF;
+}
+.title h2 {
+	color: #FFFFFF;
+	font-size: 16px;
+	font-weight: 400;
+	text-transform: uppercase;
+	letter-spacing: 5px;
+	margin-top: 50px;
+}
+
+/* navigation */
+.main_nav {
+	position: fixed;
+	top: 0px;
+	max-height: 50px;
+	z-index: 999;
+	width: 100%;
+	padding-top: 17px;
+	background: none;
+	overflow: hidden;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+	opacity: 0;
+	top: -100px;
+	padding-bottom: 6px;
+}
+
+.open-nav {
+	max-height: 400px !important;
+}
+.sticky {
+	background-color: #ffffff;
+	opacity: 1;
+	top: 0px;
+}
+nav {
+	width: 100%;
+	margin-top: 5px;
+}
+
+nav ul li {
+	display: inline-block;
+	margin-left: 35px;
+	line-height: 1.5;
+	letter-spacing: 1px;
+}
+
+@media only screen and (max-width: 766px) {
+nav ul li {
+	width: 100%;
+	padding: 7px 0;
+	margin: 0;
+}
+nav ul li:first-child {
+	margin-top: 70px;
+}
+}
+nav ul a {
+	text-transform: uppercase;
+	font-size: 12px;
+	text-decoration: none;
+}
+nav ul a:hover {
+	color: #CFCFCF;
+}
+.mobile-toggle {
+	display: none;
+	cursor: pointer;
+	font-size: 20px;
+	position: absolute;
+	right: 22px;
+	top: 0;
+	width: 30px;
+}
+
+@media only screen and (max-width: 766px) {
+.mobile-toggle {
+	display: block;
+}
+}
+.mobile-toggle span {
+	width: 30px;
+	height: 4px;
+	margin-bottom: 6px;
+	background: #000000;
+	display: block;
+}
+.scroll-down {
+	position: absolute;
+	left: 50%;
+	bottom: 5vh;
+	display: block;
+	text-align: center;
+	font-size: 20px;
+	z-index: 100;
+	text-decoration: none;
+	text-shadow: 0;
+	width: 13px;
+	height: 13px;
+	border-bottom: 2px solid #fff;
+	border-right: 2px solid #fff;
+	z-index: 9;
+	-webkit-transform: translate(-50%, 0%) rotate(45deg);
+	-moz-transform: translate(-50%, 0%) rotate(45deg);
+	transform: translate(-50%, 0%) rotate(45deg);
+	-webkit-animation: fade_move_down 2s ease-in-out infinite;
+	-moz-animation: fade_move_down 2s ease-in-out infinite;
+	animation: fade_move_down 2s ease-in-out infinite;
+}
+
+
+/* about */
+#about {
+	padding: 100px 0 50px 0;
+	background-color: #F5F5F5;
+}
+
+/* education */
+#education {
+	padding: 100px 0 100px 0;
+}
+
+/* portfolio */
+#portfolio {
+	padding: 100px 0 100px 0;
+	background-color:  #F5F5F5;
+}
+
+/* contact */
+#contact {
+	padding: 100px 0 100px 0;
+}
+
+/* footer */
+footer {
+	min-height: 70px;
+	padding: 10px 0 10px 0;
+	box-sizing: border-box;
+	background-image: url("https://wallpaperaccess.com/full/1271644.jpg")
+}
+footer p {
+	margin: 20px 0 0 0;
+}
+.socialIcons {
+	font-size: 55px;
+	color: rgba(0, 0, 0, 0.7);
+}
+
+.container:after, .row:after, .u-cf {
+	content: "";
+	display: table;
+	clear: both;
 }
