--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300");
+
 /* body */
 html {
 	font-size: 11px;
@@ -271,3 +272,90 @@ footer p {
 	display: table;
 	clear: both;
 }
+
+/* porfolio */
+.portfolio-container {
+	/* padding: 40px 80px; */
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+  }
+  
+/* card */
+.card {
+	position: relative;
+	flex: 0 0 240px;
+	width: 240px;
+	height: 320px;
+	background-color: #333;
+	overflow: hidden;
+	border-radius: 10px;
+	transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  }
+  
+  .card-bg {
+	opacity: 0.5;
+	position: absolute;
+	top: -20px;
+	left: -20px;
+	width: 100%;
+	height: 100%;
+	padding: 20px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95), opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+	pointer-events: none;
+  }
+
+
+/* card info title */
+.card-info h1 {
+	font-family: "Arial";
+	font-size: 30px;
+	font-weight: 700;
+	text-shadow: #cdcdcd 0 10px 10px;
+  }
+/* card info inside */
+  .card-info {
+	padding: 20px;
+	position: absolute;
+	bottom: 0;
+	color: #fff;
+	-webkit-transform: translateY(40%);
+			transform: translateY(40%);
+	transition: 0.6s 1.6s cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  .card-info p {
+	opacity: 0;
+	text-shadow: #cdcdcd 0 2px 3px;
+	transition: 0.5s 1.0s cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  .card-info * {
+	position: relative;
+	z-index: 1;
+  }
+
+  .card-info:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 0;
+	width: 100%;
+	height: 100%;
+	transition: 3s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  }
+
+  .card-wrap:hover .card-info {
+	-webkit-transform: translateY(0);
+			transform: translateY(0);
+  }
+  .card-wrap:hover .card-info p {
+	opacity: 1;
+  } 
+
+.card-wrap:hover .card-info, .card-wrap:hover .card-info p {
+	transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+  }
